--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <!-- Directions:
         Put your three image tags here.
     -->
+    <img src="poop.jpg" alt="Lake">
+    <img src="scoop.jpg" alt="VeggieMountain">
+    <img src="loop.jpg" alt="FieldHouse">
   </body>
 </html>
